--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/App.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/App.axaml
@@ -1,7 +1,7 @@
 ﻿<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TeamBond.Syntosa.Validation.JsonToSyntosa"
-             x:Class="TeamBond.Syntosa.Validation.JsonToSyntosa.App">
+             xmlns:local="clr-namespace:TeamBond.Syntosa.Validation.DataEditor"
+             x:Class="TeamBond.Syntosa.Validation.DataEditor.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
