--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/JsonConverterView.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/JsonConverterView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="TeamBond.Syntosa.Validation.JsonToSyntosa.Views.JsonConverterView">
+             x:Class="TeamBond.Syntosa.Validation.DataEditor.Views.JsonConverterView">
   <DockPanel Height="450" Width="800">
     <ComboBox DockPanel.Dock="Top"
               Items="{Binding ClassStyles}"
