--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/MainWindow.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/MainWindow.axaml
@@ -1,6 +1,6 @@
 ﻿<Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        x:Class="TeamBond.Syntosa.Validation.JsonToSyntosa.Views.MainWindow"
+        x:Class="TeamBond.Syntosa.Validation.DataEditor.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Avalonia Todo"
         Content="{Binding Content}">
