Added login functionality

--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/MainWindow.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/MainWindow.axaml
@@ -3,12 +3,75 @@
         x:Class="TeamBond.Syntosa.Validation.DataEditor.Views.MainWindow"
         Icon="/Assets/TeamBondLogo.ico"
         Title="TeamBond Data Editor">
-  <TabControl>
-    <TabItem Header="Type Function Creator" 
-             Content="{Binding TypeFunctionCreatorContent}"/>
-    <TabItem Header="Type Creator"
-             Content="{Binding TypeCreatorContent}"/>
-    <TabItem Header="Data Editor"
-             Content="{Binding PrototypeEditorContent}"/>
-  </TabControl>
+  <DockPanel>
+    <TextBlock DockPanel.Dock="Top"
+               IsVisible="{Binding !IsNotLoggingIn}"
+               Text="Please enter your username and password"/>
+    <TextBox DockPanel.Dock="Top"
+             IsVisible="{Binding !IsNotLoggingIn}"
+             Text="{Binding Username}"
+             Watermark="Username"/>
+    <TextBox DockPanel.Dock="Top"
+             IsVisible="{Binding !IsNotLoggingIn}"
+             Text="{Binding Password}"
+             Watermark="Password"
+             PasswordChar="#"/>
+    <Button Command="{Binding LogIn}"
+            IsVisible="{Binding !IsNotLoggingIn}"
+            DockPanel.Dock="Top"
+            Content="Log In"/>
+    <Button Command="{Binding Register}"
+            IsVisible="{Binding !IsNotLoggingIn}"
+            DockPanel.Dock="Top"
+            Content="Register"/>
+    <TextBlock DockPanel.Dock="Top"
+               IsVisible="{Binding IsRegistering}"
+               Text="User registration"/>
+    <TextBox DockPanel.Dock="Top"
+             IsVisible="{Binding IsRegistering}"
+             Text="{Binding Username}"
+             Watermark="Username"/>
+    <TextBox DockPanel.Dock="Top"
+         IsVisible="{Binding IsRegistering}"
+         Text="{Binding Email}"
+         Watermark="Email"/>
+    <TextBox DockPanel.Dock="Top"
+         IsVisible="{Binding IsRegistering}"
+         Text="{Binding FirstName}"
+         Watermark="First Name"/>
+    <TextBox DockPanel.Dock="Top"
+         IsVisible="{Binding IsRegistering}"
+         Text="{Binding LastName}"
+         Watermark="Last Name"/>
+    <TextBox DockPanel.Dock="Top"
+             IsVisible="{Binding IsRegistering}"
+             Text="{Binding Password}"
+             Watermark="Password"
+             PasswordChar="#"/>
+    <TextBox DockPanel.Dock="Top"
+             IsVisible="{Binding IsRegistering}"
+             Text="{Binding PasswordConfirm}"
+             Watermark="Confirm Password"
+             PasswordChar="#"/>
+    <Button Command="{Binding CreateUser}"
+            DockPanel.Dock="Top"
+            Content="Create User"
+            IsVisible="{Binding IsRegistering}"/>
+    <Button Command="{Binding ReturnToLogin}"
+        DockPanel.Dock="Top"
+        Content="Return to Login"
+        IsVisible="{Binding IsRegistering}"/>
+    <TextBox DockPanel.Dock="Top"
+             Text="{Binding Errors}"
+             IsVisible="{Binding HasErrors}"/>
+    <TabControl IsVisible="{Binding SuccessfulLogin}"
+                DockPanel.Dock="Top">
+      <TabItem Header="Type Function Creator"
+               Content="{Binding TypeFunctionCreatorContent}"/>
+      <TabItem Header="Type Creator"
+               Content="{Binding TypeCreatorContent}"/>
+      <TabItem Header="Data Editor"
+               Content="{Binding PrototypeEditorContent}"/>
+    </TabControl>
+  </DockPanel>
 </Window>
