Added domian creator and restuctured editor

--- a/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/MainWindow.axaml
+++ b/TeamBond.Syntosa.Validation/Tools/TeamBond.Syntosa.Validation.DataEditor/Views/MainWindow.axaml
@@ -66,6 +66,10 @@
              IsVisible="{Binding HasErrors}"/>
     <TabControl DockPanel.Dock="Top"
                 IsVisible="{Binding IsNotLoggingIn}">
+      <TabItem Header="Module Creator"
+               Content="{Binding ModuleCreatorContent}"/>
+      <TabItem Header="Type Unit Creator"
+               Content="{Binding TypeUnitCreatorContent}"/>
       <TabItem Header="Type Function Creator"
                Content="{Binding TypeFunctionCreatorContent}"/>
       <TabItem Header="Type Creator"
